# xivapi-beta-client

./: README.md  generate-client.sh  generator_conf.yaml  pyproject.toml
xivapi-beta-client/: README.md  pyproject.toml
xivapi-beta-client/xivapi_beta_client/: __init__.py
xivapi-beta-client/xivapi_beta_client/api/assets/: get_asset_path.py
xivapi-beta-client/xivapi_beta_client/api/search/: get_search.py
xivapi-beta-client/xivapi_beta_client/api/sheets/: get_sheet.py  get_sheet_sheet.py  get_sheet_sheet_row.py
xivapi-beta-client/xivapi_beta_client/models/: __init__.py  asset_query.py  error_response.py  language_string.py  row_reader_query.py  search_query.py  search_response.py  sheet_query.py  sheet_response.py  version_query.py
xivapi_beta_client/api/versions/: get_version.py
xivapi_beta_client/models/: asset_path.py  format_.py  row_path.py  row_response.py  row_result.py  search_result.py  sheet_path.py  value_string.py
